added etherem wallet check api
